Fix rendering on JupyterHub 4.1: respect `absolute_url` for protocol determination, support `data-absolute-url` (#14003)
* Fix rendering on JupyterHub 4.1

* Get rid of the mutable variable

Co-authored-by: Mateusz Paprocki <mattpap@gmail.com>

* Add an example

* Do not use type casting, define a custom type guard

* Reduce size of the negative example iframe

* Lint

* Move to `app/iframe_embed`

* Skip `iframe_embed` for now

* Retrigger CI

* Move to `examples/server/api`

---------

Co-authored-by: Mateusz Paprocki <mattpap@gmail.com>

--- a/tests/examples.yaml
+++ b/tests/examples.yaml
@@ -16,7 +16,7 @@
 - path: "examples/output/webgl/*"
 
 - path: "examples/output/apis/*"
-  skip: ["autoload_static.py", "autoload_static_flask.py", "components.py", "components_themed.py", "json_item.py", "json_item_themed.py", "server_document", "server_session"]
+  skip: ["autoload_static.py", "autoload_static_flask.py", "components.py", "components_themed.py", "iframe_embed", "json_item.py", "json_item_themed.py", "server_document", "server_session"]
 
 - path: "examples/plotting/*"
 
