Add script:watch task for incremental builds

--- a/bokehjs/make/package.json
+++ b/bokehjs/make/package.json
@@ -18,6 +18,7 @@
     "@types/yargs": "^17.0.32",
     "acorn": "^8.12.1",
     "chalk": "^4.1.2",
+    "chokidar": "^4.0.0",
     "del": "^6.1.1",
     "eslint": "^8.56.0",
     "semver": "^7.6.2",
