Fix syntax in bokehjs-test-chromium.yml workflow

--- a/.github/workflows/bokehjs-test-chromium.yml
+++ b/.github/workflows/bokehjs-test-chromium.yml
@@ -15,7 +15,7 @@ on:
           - "edge"
         default: "beta"
   schedule:
-    cron: '0 15 * * WED' # two hours before weekly meeting
+    - cron: '0 15 * * WED' # two hours before weekly meeting
 
 jobs:
   test:
