More syntax fixes in bokehjs-test-chromium.yml

--- a/.github/workflows/bokehjs-test-chromium.yml
+++ b/.github/workflows/bokehjs-test-chromium.yml
@@ -46,7 +46,7 @@ jobs:
         if: runner.os == 'Linux'
         shell: bash
         run: |
-          CHANNEL="latest/${{ github.event.inputs.version || "beta" }}"
+          CHANNEL="latest/${{ github.event.inputs.version || 'beta' }}"
           sudo snap install --channel=CHANNEL chromium
 
       - name: Install dependencies
